# TonalRecall

./: .gitignore  .pre-commit.yaml  BUGS.md  FRET_PLAN.md  LOGGING.md  MEMORIES.md  Makefile  README.md  REFACTOR.md  TODO.md  audio_detector.py  check_audio_devices.py  fretboard.json  note_game.py  pyproject.toml  pytest.ini  requirements.txt  run_refactored.py  simple_detector.py  test_frequency.py  test_visualizer.py  tonal_recall_difficulty_levels.md
.github/workflows/: test_lint.yaml
recordings/: A1.json  A2.json  D2.json  D3.json  E1.json  E2.json  F1#.json  F1.json  G1.json  G2.json  G3.json
tests/: simple_import_test.py  test_imports.py  test_note_detector_imports.py  test_note_game.py  test_note_matcher.py  test_spn.py
tests/note_detection/: baseline_test.py
tonal_recall/: __main__.py  audio_device.py  guitar_monitor.py  logger.py  logging_config.py  main.py  main_refactored.py  mock_note_detector.py  note_detector.py  note_game.py  note_game_core.py  note_matcher.py  note_types.py  note_utils.py  stats.py  ui.py
tonal_recall/audio/: audio_input.py  note_detection_service.py  note_detector.py
tonal_recall/cli/: __init__.py  direct_note_detector.py  main.py  note_detector_cli.py  note_detector_cli_refactored.py
tonal_recall/core/: __init__.py  config.py  events.py  factory.py  interfaces.py
tonal_recall/detection/: stability_analyzer.py
tonal_recall/scripts/: run_harness.py
tonal_recall/services/: audio_providers.py  frequency.py  interfaces.py  note_detection_service.py
tonal_recall/tests/: test_audio_processing.py
(+2 files in other folders)
