[project]
name = "Tonal Recall"
version = "0.1.0"
description = "A bass guitar learning game using frequency detection"
dependencies = [
    "sounddevice",
    "numpy",
    "aubio",
    "pygame",
    "click>=8.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
go = "test_frequency:main"
