[project]
name = "TonalRecall"
version = "0.1.0"
description = "A bass guitar learning game using frequency detection"
requires-python = ">=3.11"
dependencies = [
    "sounddevice",
    "numpy",
    "aubio",
    "pygame",
    "click>=8.2.1",
    "pyfiglet>=1.0.3",
    "ty>=0.0.1a8",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
go = "test_frequency:main"
tonal-recall = "tonal_recall.main:main"
pytest = "pytest:main"
pytest_debug = "pytest_debug:main"
